--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Surveys</a>
+      <a class="navbar-brand" [routerLink]="['/HomePage']" routerLinkActive="router-link-active" >Surveys</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mr-auto">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a  (click)='logout()' class="nav-link right end">log out </a>
+          <a class="nav-link"  href="#">Home</a>
+          <a style="cursor: pointer;" (click)='logout()' class="nav-link">log out </a>
     
         </div>
     
